fix(Reset Password): Hide back link on mobile
Hide back link on mobile.

--- a/app/login/reset.less
+++ b/app/login/reset.less
@@ -59,6 +59,13 @@
         .pull-left;
         font-size: @font-size-base;
         line-height: 62px;
+
+        /* FIXME: Once mobile login for v2 is enabled, we have to remove the
+         * mobile style below to enable the back button. */
+        .mobile({
+
+            display: none;
+        });
     }
 
     .button-reset {
